--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -24,10 +24,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.300.0",
-    "next": "15.0.0",
+    "next": "14.2.3",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0-rc",
-    "react-dom": "^19.0.0-rc",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.0",
     "recharts": "^2.10.0",
     "tailwind-merge": "^2.2.0",
@@ -41,7 +41,7 @@
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.0.0",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
