--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.300.0",
